build/log/idf_py_stderr_output_8532
Command: make -j 14 all
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c: In function 'adc_timer_callback':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c:50:26: warning: comparison is always false due to limited range of data type [-Wtype-limits]
   50 |             if (ifPPGled == 0x1000)  {      ppg_adc = adc_val;
      |                          ^~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c:51:17: error: 'i' undeclared (first use in this function)
   51 |                 i
      |                 ^
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c:51:17: note: each undeclared identifier is reported only once for each function it appears in
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c:51:18: error: expected ';' before 'if'
   51 |                 i
      |                  ^
      |                  ;
   52 |        if(disp_toggle)  display_callback();
      |        ~~         
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c:54:23: error: 'dsp_toggle' undeclared (first use in this function); did you mean 'disp_toggle'?
   54 |         disp_toggle = dsp_toggle << 1;
      |                       ^~~~~~~~~~
      |                       disp_toggle
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c: At top level:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c:104:16: warning: 'display_callback' defined but not used [-Wunused-function]
  104 | void IRAM_ATTR display_callback(void )
      |                ^~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:167: esp-idf/main/CMakeFiles/__idf_main.dir/dvr/interr_event.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6398: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
